# CameraMonitor

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/nano71/cameramonitor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: video_nv12_f.glsl  video_rgba_f.glsl  video_v.glsl
app/src/main/cpp/: CMakeLists.txt  UsbAudioStreamer.cpp  UsbAudioStreamer.h  UsbVideoNativeLibrary.cpp  UsbVideoStreamer.cpp  UsbVideoStreamer.h
app/src/main/cpp/jniLibs/include/: jconfig.h
app/src/main/java/com/meta/usbvideo/: StatusScreenViewHolder.kt  StreamerActivity.kt  StreamerScreensAdapter.kt  StreamerViewModel.kt  StreamerViewModelFactory.kt  StreamingViewHolder.kt  UsbVideoApplication.kt  UsbVideoNativeLibrary.kt
app/src/main/java/com/meta/usbvideo/animation/: ZoomOutPageTransformer.kt
app/src/main/java/com/meta/usbvideo/app/: UsbVideoApplication.kt
app/src/main/java/com/meta/usbvideo/connection/: AudioStreamingConnection.kt  VideoStreamingConnection.kt
app/src/main/java/com/meta/usbvideo/core/connection/: AudioStreamingConnection.kt  VideoStreamingConnection.kt
app/src/main/java/com/meta/usbvideo/core/eventloop/: EventLooper.kt
app/src/main/java/com/meta/usbvideo/core/permission/: CameraPermissionState.kt  PermissionStatus.kt  Permissions.kt  RecordAudioPermissionState.kt
app/src/main/java/com/meta/usbvideo/core/usb/: UsbDescriptorParser.kt  UsbDeviceState.kt  UsbMonitor.kt  UsbVideoNativeLibrary.kt
app/src/main/java/com/meta/usbvideo/eventloop/: EventLooper.kt
app/src/main/java/com/meta/usbvideo/feature/streamer/: StreamerActivity.kt  StreamerViewModel.kt
app/src/main/java/com/meta/usbvideo/feature/streamer/adapter/: StreamerScreensAdapter.kt
app/src/main/java/com/meta/usbvideo/feature/streamer/animation/: ZoomOutPageTransformer.kt
app/src/main/java/com/meta/usbvideo/feature/streamer/controller/: UsbStreamingController.kt
app/src/main/java/com/meta/usbvideo/feature/streamer/ui/: VideoContainerView.kt
app/src/main/java/com/meta/usbvideo/feature/streamer/viewholder/: StatusScreenViewHolder.kt  StreamingViewHolder.kt
app/src/main/java/com/meta/usbvideo/permission/: Permissions.kt  PermissionsViewModel.kt  PermissionsViewModelFactory.kt
app/src/main/java/com/meta/usbvideo/ui/: VideoContainerView.kt
app/src/main/java/com/meta/usbvideo/usb/: AudioStreamingConnection.kt  UsbDescriptorParser.kt  UsbDeviceState.kt  UsbMonitor.kt  VideoStreamingConnection.kt
app/src/main/java/com/meta/usbvideo/viewHolder/: StatusScreenViewHolder.kt  StreamingViewHolder.kt
app/src/main/java/com/meta/usbvideo/viewModel/: StreamerUiActionDelegate.kt  StreamerViewModel.kt
app/src/main/java/com/nano71/cameramonitor/app/: UsbVideoApplication.kt
app/src/main/java/com/nano71/cameramonitor/core/connection/: AudioStreamingConnection.kt  VideoStreamingConnection.kt
app/src/main/java/com/nano71/cameramonitor/core/eventloop/: EventLooper.kt
app/src/main/java/com/nano71/cameramonitor/core/permission/: CameraPermissionState.kt  PermissionStatus.kt  Permissions.kt  RecordAudioPermissionState.kt
app/src/main/java/com/nano71/cameramonitor/core/usb/: UsbDescriptorParser.kt  UsbDeviceState.kt  UsbMonitor.kt  UsbVideoNativeLibrary.kt
app/src/main/java/com/nano71/cameramonitor/feature/streamer/: StreamerActivity.kt  StreamerViewModel.kt
app/src/main/java/com/nano71/cameramonitor/feature/streamer/adapter/: StreamerScreensAdapter.kt
app/src/main/java/com/nano71/cameramonitor/feature/streamer/animation/: ZoomOutPageTransformer.kt
app/src/main/java/com/nano71/cameramonitor/feature/streamer/ui/: CameraGridOverlay.kt  (+1 more)
app/src/main/res/drawable/: bg_bottom_toolbar.xml  ic_bar_chart_48px.xml  ic_close_48px.xml  ic_grid_3x3_48px.xml  ic_screen_record_48px.xml  ic_screenshot_region_48px.xml  ic_stop_circle_48px.xml  ic_stroke_full_48px.xml  status_bg.xml
app/src/main/res/layout/: activity_streamer.xml  status_screen.xml  streaming_screen.xml
app/src/main/res/values/: colors.xml  strings_untranslated.xml  themes.xml
app/src/main/res/values-zh/: strings_untranslated.xml
app/src/main/res/xml/: uvc_device_filter.xml
app/src/test/java/com/meta/usbvideo/usb/: UsbDecriptorsData.kt  VideoStreamingConnectionTests.kt
app/src/test/java/com/nano71/cameramonitor/usb/: UsbDecriptorsData.kt  VideoStreamingConnectionTests.kt
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
